Finally fixed issues with getting the backend up and running

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://${POSTGRESQL_HOST:localhost}:5433/Havenfound Backend
+spring.datasource.username=Havenfound
+spring.datasource.password=SpringBackend
+server.port=4235
