--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:postgresql://${POSTGRESQL_HOST:localhost}:5433/Havenf
 spring.datasource.username=Havenfound
 spring.datasource.password=SpringBackend
 server.port=4235
+spring.datasource.initialization-mode=always
+spring.jpa.show-sql = true
+
